--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ opt-level = 3
 [dependencies]
 avian3d = "0.2"
 bevy = "0.15"
+bevy_embedded_assets = "0.12"
 petgraph = "0.7"
 clap = { version = "4", features = ["derive", "color"] }
 iyes_perf_ui = "0.4"
