--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ k8s-openapi = { version = "0.24", features = ["latest"] }
 kube = { version = "0.99", features = ["runtime", "derive"] }
 leafwing-input-manager = "0.16"
 petgraph = "0.7"
+rlua = "0.20.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
